# learn-math

./: .pdm.toml  cspell.json  pyproject.toml
JuliaCalc/: Manifest.toml  Project.toml
JuliaCalc/src/: PropositionLogicCalc.jl  prime.jl
PropositionLogicCalc/: Project.toml
PropositionLogicCalc/src/: PropositionLogicCalc.jl
notebooks/02集合函数序列矩阵/: 001集合.ipynb
notebooks/discovery/: 01最大数.ipynb  01最大数.py
notebooks/sympy/: 01assumptions.ipynb  01assumptions.py
notebooks/微积分/: 01.微积分的本质.md  02.导数.md  02导数.ipynb  03.积分.md  03积分.ipynb
notebooks/离散数学/01逻辑和证明/: 001命题逻辑.ipynb  001命题逻辑.py
notebooks/离散数学/01逻辑和证明/logiccalc/: logic.py
notebooks/离散数学/02集合函数序列矩阵/: 001集合.ipynb  001集合.py  002数列.ipynb  002数列.py  003矩阵.ipynb  003矩阵.py
notebooks/离散数学/03算法/: 01算法.ipynb  01算法.py
notebooks/离散数学/04数论和密码学/: 01整除性和模算数.ipynb  01整除性和模算数.py  02整数表示和算法.ipynb  02整数表示和算法.py  03素数和最大公约数.ipynb  03素数和最大公约数.py  04求解同余方程.ipynb  04求解同余方程.py
notebooks/离散数学/06计数/: 排列组合.ipynb
notebooks/离散数学/6计数/: 排列组合.ipynb  排列组合.py
notebooks/线性代数/: 01.向量.ipynb  01.向量.py  02.线性组合-张成的空间与基.md  03.矩阵与线性变换.md  04.矩阵乘法和线性变换复合.ipynb  04.矩阵乘法和线性变换复合.md  04.矩阵乘法和线性变换复合.py  05.行列式.ipynb  05.行列式.py  05行列式.md  06.逆矩阵.ipynb  06.逆矩阵列空间与零向量.md  07.向量点积.ipynb  07.向量点积和对偶性.md  08.向量叉积.ipynb  08.向量叉积.md  09.基变换.md  10.特征向量与特征值.md  11.抽象向量空间.md  12.克莱姆法则几何解释.md
util/: paint_vector.py
